--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<link rel="stylesheet" href="./style.css" />
 		<!-- responsive css file -->
 		<link rel="stylesheet" href="./res.css" />
-		<title>new project</title>
+		<title>newDemoSite 😎</title>
 	</head>
 	<body id="home">
 		<!-- Navbar section -->
