--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 						<img src="./img/p1.jpeg" alt="" srcset="" />
 					</div>
 					<div class="teamContent">
-						<p class="text-gray-500">jhone doe</p>
+						<p class="text-gray-500">helen marry</p>
 						<button>Hire him</button>
 					</div>
 				</div>
@@ -310,7 +310,7 @@
 						<img src="./img/g7.jpg" alt="" srcset="" />
 					</div>
 					<div class="teamContent">
-						<p class="text-gray-500">jhone doe</p>
+						<p class="text-gray-500">jenice parl</p>
 						<button>Hire him</button>
 					</div>
 				</div>
@@ -319,7 +319,7 @@
 						<img src="./img/p3.jpeg" alt="" srcset="" />
 					</div>
 					<div class="teamContent">
-						<p class="text-gray-500">jhone doe</p>
+						<p class="text-gray-500">robert jef</p>
 						<button>Hire him</button>
 					</div>
 				</div>
@@ -328,7 +328,7 @@
 						<img src="./img/p4.jpeg" alt="" srcset="" />
 					</div>
 					<div class="teamContent">
-						<p class="text-gray-500">jhone doe</p>
+						<p class="text-gray-500">ishita roy</p>
 						<button>Hire him</button>
 					</div>
 				</div>
@@ -337,7 +337,7 @@
 						<img src="./img/p5.jpeg" alt="" srcset="" />
 					</div>
 					<div class="teamContent">
-						<p class="text-gray-500">jhone doe</p>
+						<p class="text-gray-500">joseph xinn</p>
 						<button>Hire him</button>
 					</div>
 				</div>
@@ -346,7 +346,7 @@
 						<img src="./img/p6.jpeg" alt="" srcset="" />
 					</div>
 					<div class="teamContent">
-						<p class="text-gray-500">jhone doe</p>
+						<p class="text-gray-500">my crush🥰</p>
 						<button>Hire him</button>
 					</div>
 				</div>
@@ -355,7 +355,7 @@
 						<img src="./img/face-4.jpg" alt="" srcset="" />
 					</div>
 					<div class="teamContent">
-						<p class="text-gray-500">jhone doe</p>
+						<p class="text-gray-500">ritha mico</p>
 						<button>Hire him</button>
 					</div>
 				</div>
