--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 					</div>
 					<div class="teamContent">
 						<p class="text-gray-500">helen marry</p>
-						<button>Hire him</button>
+						<button>contact</button>
 					</div>
 				</div>
 				<div class="item">
@@ -311,7 +311,7 @@
 					</div>
 					<div class="teamContent">
 						<p class="text-gray-500">jenice parl</p>
-						<button>Hire him</button>
+						<button>contact</button>
 					</div>
 				</div>
 				<div class="item">
@@ -320,7 +320,7 @@
 					</div>
 					<div class="teamContent">
 						<p class="text-gray-500">robert jef</p>
-						<button>Hire him</button>
+						<button>contact</button>
 					</div>
 				</div>
 				<div class="item">
@@ -329,7 +329,7 @@
 					</div>
 					<div class="teamContent">
 						<p class="text-gray-500">ishita roy</p>
-						<button>Hire him</button>
+						<button>contact</button>
 					</div>
 				</div>
 				<div class="item">
@@ -338,7 +338,7 @@
 					</div>
 					<div class="teamContent">
 						<p class="text-gray-500">joseph xinn</p>
-						<button>Hire him</button>
+						<button>contact</button>
 					</div>
 				</div>
 				<div class="item">
@@ -347,7 +347,7 @@
 					</div>
 					<div class="teamContent">
 						<p class="text-gray-500">my crush🥰</p>
-						<button>Hire him</button>
+						<button>contact</button>
 					</div>
 				</div>
 				<div class="item">
@@ -356,7 +356,7 @@
 					</div>
 					<div class="teamContent">
 						<p class="text-gray-500">ritha mico</p>
-						<button>Hire him</button>
+						<button>contact</button>
 					</div>
 				</div>
 			</div>
